# BenchMARL

./: .gitignore  .gitmodules  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
benchmarl/: __init__.py  __main__.py  eval_results.py  run.py  run_multiple_config.py  utils.py
benchmarl/algorithms/: __init__.py  common.py  iddpg.py  ippo.py  iql.py  isac.py  maddpg.py  mappo.py  masac.py  qmix.py  vdn.py
benchmarl/benchmark/: benchmark.py
benchmarl/conf/algorithm/: cfg_common.py  cfg_iddpg.py  cfg_ippo.py  cfg_iql.py  cfg_isac.py  cfg_maddpg.py  cfg_mappo.py  cfg_masac.py  cfg_qmix.py  cfg_vdn.py
benchmarl/conf/environment/: __init__.py
benchmarl/conf/environment/meltingpot/: __init__.py  harvest_open.py
benchmarl/conf/environment/pettingzoo/: __init__.py  multiwalker.py  simple_adversary.py  simple_crypto.py  simple_push.py  simple_reference.py  simple_speaker_listener.py  simple_spread.py  simple_tag.py  simple_world_comm.py  waterworld.py
benchmarl/conf/experiment/: common.py
benchmarl/conf/model/: gnn.py  mlp.py
benchmarl/experiment/: experiment.py
benchmarl/lib/: benchmark.py  utils.py
benchmarl/lib/algorithms/: __init__.py  common.py  iddpg.py  ippo.py  iql.py  isac.py  maddpg.py  mappo.py  masac.py  qmix.py  vdn.py
benchmarl/lib/experiment/: __init__.py  experiment.py  logger.py
benchmarl/lib/models/: __init__.py  common.py  gnn.py  mlp.py
scripts/: copy_over.py  integrating_meltingpot.ipynb  tensordict.ipynb
test/: test_algorithm.py  test_pettingzoo.py  test_smacv2.py  test_vmas.py  utils_experiment.py
(+35 files in other folders)
